src/test/run-pass/unique-in-vec.rs
fn main() {
    assert [~100][0] == ~100;
}