src/test/compile-fail/reserved-f80.rs
// error-pattern:reserved keyword

fn main() {
  let int f80 = 0;
}
